--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "gatsby": "^2.15.21",
+    "gatsby-plugin-netlify": "^2.1.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
